fixed alignment when width is resized

--- a/src/app/pages/user-locator/user-locator.page.scss
+++ b/src/app/pages/user-locator/user-locator.page.scss
@@ -77,7 +77,7 @@ responsive-timepicker {
   }
 
   ion-select {
-    padding: 10px;
+    padding-left: 10px;
     background-color: var(--lynxWhite);
     --highlight-color-focused: var(--lynxPink);
     --highlight-color-invalid: var(--lynxPink);
